SONAR-17645 Enable SCIM feature toggling mechanism